--- a/public/css/base.css
+++ b/public/css/base.css
@@ -179,6 +179,32 @@ body {
   .s-bill h2 {
     line-height: 20px;
     margin: 1em 0; }
+  .s-bill .tips {
+    border: 1px solid #e0dee1;
+    border-radius: 10px;
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    line-height: 20px;
+    text-align: center;
+    color: #e0dee1; }
+  .s-bill .tip-panel {
+    display: block;
+    width: 100%;
+    background: #e0dee1;
+    padding: 10px;
+    box-sizing: border-box;
+    margin: 10px 0; }
+  .s-bill input[type="number"] {
+    height: 30px;
+    line-height: 30px;
+    width: 80%;
+    padding: 5px;
+    font-size: 20px;
+    -webkit-appearance: none;
+    border: 1px solid #888;
+    color: #000;
+    box-shadow: none; }
   .s-bill .members input {
     height: 20px;
     line-height: 20px;
