--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -147,6 +147,36 @@ $width:270px;
         line-height: 20px;
         margin: 1em 0;
     }
+    .tips{
+        border:1px solid $bgc1;
+        border-radius: 10px;
+        display: inline-block;
+        height: 20px;
+        width: 20px;
+        line-height: 20px;
+        text-align: center;
+        color: $bgc1;
+    }
+    .tip-panel{
+        display: block;
+        width:100%;
+        background: $bgc1;
+        padding: 10px;
+        box-sizing: border-box;
+        margin: 10px 0;
+    }
+    input[type="number"]{
+        height: 30px;
+        line-height: 30px;
+        width: 80%;
+        padding: 5px;
+        font-size: 20px;
+        -webkit-appearance: none;
+        border: 1px solid #888;
+        color: #000;
+        box-shadow: none;
+
+    }
     .members{
         input{
             height: 20px;
