--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -137,7 +137,9 @@ $width:270px;
     }
 }
 .s-bill{
-    padding: 0 20px;
+    .bill{
+        padding: 0 20px;
+    }
     h1{
         text-align: center;
         font-size: 30px;
