--- a/public/css/base.css
+++ b/public/css/base.css
@@ -52,7 +52,7 @@ body {
   position: fixed;
   bottom: 50px;
   color: #888;
-  background: #fff;
+  background: white;
   height: 60px;
   width: 60px;
   line-height: 60px; }
@@ -258,7 +258,7 @@ body {
     .s-history .history li .detail {
       display: inline-block;
       width: 80%;
-      padding: 0 50px 0 0;
+      padding: 0 60px 0 0;
       height: 30px;
       line-height: 30px; }
     .s-history .history li.deletable {
@@ -281,52 +281,52 @@ body {
     .s-history .history li.deleted .detail {
       text-decoration: line-through; }
 
-.s-bill {
+.s-bill, .s-history-detail {
   color: #7d7d7d; }
-  .s-bill .hd {
+  .s-bill .hd, .s-history-detail .hd {
     text-align: center;
     background-color: #f6f6f6;
     padding: 0 0 10px 0; }
-    .s-bill .hd img {
+    .s-bill .hd img, .s-history-detail .hd img {
       width: 40px;
       height: 40px;
       border-radius: 20px;
       margin: 10px 0;
       display: inline-block; }
-    .s-bill .hd .mode {
+    .s-bill .hd .mode, .s-history-detail .hd .mode {
       margin: 10px auto 0;
       background: #d4d4d4;
       color: #fff;
       width: 160px;
       padding: 2px 0; }
-      .s-bill .hd .mode span {
+      .s-bill .hd .mode span, .s-history-detail .hd .mode span {
         padding: 2px 10px;
         font-size: 15px; }
-      .s-bill .hd .mode .choosen {
+      .s-bill .hd .mode .choosen, .s-history-detail .hd .mode .choosen {
         background: #ff9b25; }
-  .s-bill .bd {
+  .s-bill .bd, .s-history-detail .bd {
     position: relative;
     padding: 10px 0 0 0;
     border-bottom: 1px dashed #aaa; }
-    .s-bill .bd h2 {
+    .s-bill .bd h2, .s-history-detail .bd h2 {
       padding: 0 0 0 15px; }
-    .s-bill .bd .all {
+    .s-bill .bd .all, .s-history-detail .bd .all {
       position: absolute;
       right: 15px;
       top: 15px; }
-    .s-bill .bd .sp {
+    .s-bill .bd .sp, .s-history-detail .bd .sp {
       color: #ff9b25;
       font-size: 20px; }
-    .s-bill .bd .members {
+    .s-bill .bd .members, .s-history-detail .bd .members {
       margin: 5px 0 0 0;
       text-align: center; }
-      .s-bill .bd .members input {
+      .s-bill .bd .members input, .s-history-detail .bd .members input {
         height: 20px;
         line-height: 20px;
         border: 1px solid #e0dee1;
         -webkit-appearance: none;
         padding: 0 10px; }
-      .s-bill .bd .members label {
+      .s-bill .bd .members label, .s-history-detail .bd .members label {
         display: inline-block;
         width: 40px;
         height: 40px;
@@ -339,39 +339,46 @@ body {
         box-shadow: 0 0 0 3px #ededed;
         padding-top: 40px;
         background-repeat: no-repeat; }
-        .s-bill .bd .members label input {
-          display: none; }
-        .s-bill .bd .members label .icon {
+        .s-bill .bd .members label input, .s-history-detail .bd .members label input {
+          visibility: hidden;
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          width: 50px;
+          height: 40px; }
+        .s-bill .bd .members label .icon, .s-history-detail .bd .members label .icon {
           position: absolute;
           top: 20px;
           right: -11px;
           font-size: 25px;
           color: #7d7d7d; }
-        .s-bill .bd .members label .icon-check-mark-2 {
+        .s-bill .bd .members label .icon-check-mark-2, .s-history-detail .bd .members label .icon-check-mark-2 {
           color: #ff9b25; }
-        .s-bill .bd .members label p {
+        .s-bill .bd .members label p, .s-history-detail .bd .members label p {
           width: 100%;
           text-overflow: ellipsis;
           overflow: hidden;
           white-space: nowrap;
           color: #676767;
           font-size: 12px; }
-  .s-bill .ft {
+  .s-bill .ft, .s-history-detail .ft {
     padding: 10px 10px 70px; }
-    .s-bill .ft h2 {
+    .s-bill .ft h2, .s-history-detail .ft h2 {
       margin: 10px 0;
       position: relative; }
-    .s-bill .ft .icon {
+    .s-bill .ft .icon, .s-history-detail .ft .icon {
       font-size: 20px;
       vertical-align: -4px; }
-    .s-bill .ft .tip-panel {
+    .s-bill .ft .tip-panel, .s-history-detail .ft .tip-panel {
       display: block;
       width: 100%;
       background: #e0dee1;
       padding: 10px;
       box-sizing: border-box;
       margin: 10px 0; }
-    .s-bill .ft input[type="number"] {
+    .s-bill .ft input[type="number"], .s-history-detail .ft input[type="number"] {
       height: 40px;
       line-height: 20px;
       width: 120px;
@@ -382,7 +389,7 @@ body {
       color: #000;
       box-shadow: none;
       border-radius: 4px; }
-    .s-bill .ft .tips {
+    .s-bill .ft .tips, .s-history-detail .ft .tips {
       border: 1px solid #e0dee1;
       border-radius: 10px;
       display: inline-block;
@@ -391,14 +398,14 @@ body {
       line-height: 20px;
       text-align: center;
       color: #e0dee1; }
-    .s-bill .ft .aver {
+    .s-bill .ft .aver, .s-history-detail .ft .aver {
       position: absolute;
       right: 10px;
       top: 10px; }
-    .s-bill .ft .average {
+    .s-bill .ft .average, .s-history-detail .ft .average {
       color: #ff9b25;
       font-size: 20px; }
-    .s-bill .ft .index-btn .icon {
+    .s-bill .ft .index-btn .icon, .s-history-detail .ft .index-btn .icon {
       font-size: 40px; }
 
 .s-list .tuan {
@@ -483,17 +490,6 @@ body {
       margin: 0 5px;
       vertical-align: -4px; }
 
-.s-history-detail .history-view {
-  padding: 0 20px; }
-.s-history-detail h1 {
-  text-align: center;
-  font-size: 30px;
-  margin: 30px 0; }
-.s-history-detail h2 {
-  line-height: 20px;
-  margin: 1em 0; }
-  .s-history-detail h2.date {
-    text-align: right; }
 .s-history-detail .process-bar {
   width: 100%;
   height: 30px;
@@ -516,33 +512,6 @@ body {
     text-align: center; }
 .s-history-detail .btn {
   margin: 30px auto; }
-.s-history-detail .members label {
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-  border-radius: 25px;
-  background-size: 100%;
-  background-repeat: no-repeat;
-  line-height: 50px;
-  text-align: center;
-  position: relative;
-  overflow: hidden;
-  margin: 5px;
-  border: 1px solid #e0dee1; }
-  .s-history-detail .members label.paid p {
-    background-color: #ACC088; }
-  .s-history-detail .members label p {
-    position: absolute;
-    bottom: -1px;
-    left: 8px;
-    width: 100%;
-    text-align: center;
-    height: 20px;
-    line-height: 20px;
-    -webkit-transform: rotate(-22deg);
-    transform: rotate(-22deg);
-    font-size: 12px;
-    background-color: #d8d8d8; }
 
 .animated {
   -webkit-animation-duration: 10s;
@@ -558,22 +527,28 @@ body {
   0%, 10% {
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0); }
+
   1%, 3%,5%, 7%, 9% {
     -webkit-transform: translate3d(-6px, 0, 0);
     transform: translate3d(-6px, 0, 0); }
+
   2%, 4%,6%, 8% {
     -webkit-transform: translate3d(6px, 0, 0);
     transform: translate3d(6px, 0, 0); } }
+
 @keyframes shake {
   0%, 10% {
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0); }
+
   1%, 3%,5%, 7%, 9% {
     -webkit-transform: translate3d(-6px, 0, 0);
     transform: translate3d(-6px, 0, 0); }
+
   2%, 4%,6%, 8% {
     -webkit-transform: translate3d(6px, 0, 0);
     transform: translate3d(6px, 0, 0); } }
+
 .shake {
   -webkit-animation-name: shake;
   animation-name: shake; }
@@ -589,54 +564,66 @@ body {
   0%, 20%, 40%, 60%, 80%, 100% {
     -webkit-transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
     transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
+
   0% {
     opacity: 0;
     -webkit-transform: scale3d(0.3, 0.3, 0.3);
     transform: scale3d(0.3, 0.3, 0.3); }
+
   20% {
     -webkit-transform: scale3d(1.1, 1.1, 1.1);
     transform: scale3d(1.1, 1.1, 1.1); }
+
   40% {
     -webkit-transform: scale3d(0.9, 0.9, 0.9);
     transform: scale3d(0.9, 0.9, 0.9); }
+
   60% {
     opacity: 1;
     -webkit-transform: scale3d(1.03, 1.03, 1.03);
     transform: scale3d(1.03, 1.03, 1.03); }
+
   80% {
     -webkit-transform: scale3d(0.97, 0.97, 0.97);
     transform: scale3d(0.97, 0.97, 0.97); }
+
   100% {
     opacity: 1;
     -webkit-transform: scale3d(1, 1, 1);
     transform: scale3d(1, 1, 1); } }
+
 @keyframes bounceIn {
   0%, 20%, 40%, 60%, 80%, 100% {
     -webkit-transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
     transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
+
   0% {
     opacity: 0;
     -webkit-transform: scale3d(0.3, 0.3, 0.3);
     transform: scale3d(0.3, 0.3, 0.3); }
+
   20% {
     -webkit-transform: scale3d(1.1, 1.1, 1.1);
     transform: scale3d(1.1, 1.1, 1.1); }
+
   40% {
     -webkit-transform: scale3d(0.9, 0.9, 0.9);
     transform: scale3d(0.9, 0.9, 0.9); }
+
   60% {
     opacity: 1;
     -webkit-transform: scale3d(1.03, 1.03, 1.03);
     transform: scale3d(1.03, 1.03, 1.03); }
+
   80% {
     -webkit-transform: scale3d(0.97, 0.97, 0.97);
     transform: scale3d(0.97, 0.97, 0.97); }
+
   100% {
     opacity: 1;
     -webkit-transform: scale3d(1, 1, 1);
     transform: scale3d(1, 1, 1); } }
+
 .bounceIn {
   -webkit-animation-name: bounceIn;
   animation-name: bounceIn; }
-
-/*# sourceMappingURL=base.css.map */
