--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -188,7 +188,7 @@ $width:270px;
             .detail{
                 display: inline-block;
                 width: 80%;
-                padding: 0 50px 0 0;
+                padding: 0 60px 0 0;
                 height: 30px;
                 line-height: 30px;
             }
@@ -221,7 +221,7 @@ $width:270px;
         }
     }
 }
-.s-bill{
+.s-bill, .s-history-detail{
     color:#7d7d7d;
     .hd{
         text-align: center;
@@ -235,7 +235,7 @@ $width:270px;
             display: inline-block;
         }
         p{
-            
+
         }
         .mode{
             margin: 10px auto 0;
@@ -294,7 +294,14 @@ $width:270px;
                 padding-top: 40px;
                 background-repeat: no-repeat;
                 input{
-                    display: none;
+                      visibility: hidden;
+                      position: absolute;
+                      top: 0;
+                      left: 0;
+                      right: 0;
+                      bottom: 0;
+                      width: 50px;
+                      height: 40px;
                 }
                 .icon{
                     position: absolute;
@@ -428,7 +435,7 @@ $width:270px;
             // border-right:1px solid $hTextC;
             text-align: center;
             .avatar{
-                display: inline-block;  
+                display: inline-block;
                 img{
                     margin-top: -70px;
                     height: 85px;
@@ -476,21 +483,7 @@ $width:270px;
 
 .s-history-detail{
 
-    .history-view{
-        padding: 0 20px;
-    }
-    h1{
-        text-align: center;
-        font-size: 30px;
-        margin: 30px 0;
-    }
-    h2{
-        line-height: 20px;
-        margin: 1em 0;
-        &.date{
-            text-align: right;
-        }
-    }
+
     .process-bar{
         width: 100%;
         height: 30px;
@@ -516,41 +509,6 @@ $width:270px;
     }
     .btn{
         margin: 30px auto;
-    }
-    .members{
-        label{
-            display: inline-block;
-            width:50px;
-            height: 50px;
-            border-radius: 25px;
-            background-size: 100%;
-            background-repeat: no-repeat;
-            line-height: 50px;
-            text-align: center;
-            position: relative;
-            overflow:hidden;
-            margin: 5px;
-            border:1px solid $bgc1;
-
-            &.paid{
-                p{
-                    background-color: #ACC088;
-                }
-            }
-            p{
-                position: absolute;
-                bottom: -1px;
-                left: 8px;
-                width: 100%;
-                text-align: center;
-                height: 20px;
-                line-height: 20px;
-                -webkit-transform: rotate(-22deg);
-                transform: rotate(-22deg);
-                font-size: 12px;
-                background-color: $hTextC;
-            }
-        }
     }
 }
 
