--- a/public/css/base.css
+++ b/public/css/base.css
@@ -52,7 +52,7 @@ body {
   position: fixed;
   bottom: 50px;
   color: #888;
-  background: white;
+  background: #fff;
   height: 60px;
   width: 60px;
   line-height: 60px; }
@@ -341,7 +341,7 @@ body {
         position: relative;
         margin: 0 15px 40px;
         box-shadow: 0 0 0 3px #ededed;
-        padding-top: 50px;
+        padding-top: 60px;
         background-repeat: no-repeat; }
         .s-bill .bd .members label input, .s-history-detail .bd .members label input {
           visibility: hidden;
@@ -366,7 +366,11 @@ body {
           overflow: hidden;
           white-space: nowrap;
           color: #676767;
-          font-size: 12px; }
+          font-size: 12px;
+          margin: 10px 0 0 0; }
+          .s-bill .bd .members label p span, .s-history-detail .bd .members label p span {
+            display: block;
+            line-height: 1.5; }
   .s-bill .ft, .s-history-detail .ft {
     padding: 10px 10px 70px; }
     .s-bill .ft h2, .s-history-detail .ft h2 {
@@ -531,28 +535,22 @@ body {
   0%, 10% {
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0); }
-
   1%, 3%,5%, 7%, 9% {
     -webkit-transform: translate3d(-6px, 0, 0);
     transform: translate3d(-6px, 0, 0); }
-
   2%, 4%,6%, 8% {
     -webkit-transform: translate3d(6px, 0, 0);
     transform: translate3d(6px, 0, 0); } }
-
 @keyframes shake {
   0%, 10% {
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0); }
-
   1%, 3%,5%, 7%, 9% {
     -webkit-transform: translate3d(-6px, 0, 0);
     transform: translate3d(-6px, 0, 0); }
-
   2%, 4%,6%, 8% {
     -webkit-transform: translate3d(6px, 0, 0);
     transform: translate3d(6px, 0, 0); } }
-
 .shake {
   -webkit-animation-name: shake;
   animation-name: shake; }
@@ -568,66 +566,54 @@ body {
   0%, 20%, 40%, 60%, 80%, 100% {
     -webkit-transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
     transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
-
   0% {
     opacity: 0;
     -webkit-transform: scale3d(0.3, 0.3, 0.3);
     transform: scale3d(0.3, 0.3, 0.3); }
-
   20% {
     -webkit-transform: scale3d(1.1, 1.1, 1.1);
     transform: scale3d(1.1, 1.1, 1.1); }
-
   40% {
     -webkit-transform: scale3d(0.9, 0.9, 0.9);
     transform: scale3d(0.9, 0.9, 0.9); }
-
   60% {
     opacity: 1;
     -webkit-transform: scale3d(1.03, 1.03, 1.03);
     transform: scale3d(1.03, 1.03, 1.03); }
-
   80% {
     -webkit-transform: scale3d(0.97, 0.97, 0.97);
     transform: scale3d(0.97, 0.97, 0.97); }
-
   100% {
     opacity: 1;
     -webkit-transform: scale3d(1, 1, 1);
     transform: scale3d(1, 1, 1); } }
-
 @keyframes bounceIn {
   0%, 20%, 40%, 60%, 80%, 100% {
     -webkit-transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
     transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
-
   0% {
     opacity: 0;
     -webkit-transform: scale3d(0.3, 0.3, 0.3);
     transform: scale3d(0.3, 0.3, 0.3); }
-
   20% {
     -webkit-transform: scale3d(1.1, 1.1, 1.1);
     transform: scale3d(1.1, 1.1, 1.1); }
-
   40% {
     -webkit-transform: scale3d(0.9, 0.9, 0.9);
     transform: scale3d(0.9, 0.9, 0.9); }
-
   60% {
     opacity: 1;
     -webkit-transform: scale3d(1.03, 1.03, 1.03);
     transform: scale3d(1.03, 1.03, 1.03); }
-
   80% {
     -webkit-transform: scale3d(0.97, 0.97, 0.97);
     transform: scale3d(0.97, 0.97, 0.97); }
-
   100% {
     opacity: 1;
     -webkit-transform: scale3d(1, 1, 1);
     transform: scale3d(1, 1, 1); } }
-
 .bounceIn {
   -webkit-animation-name: bounceIn;
   animation-name: bounceIn; }
+
+/*# sourceMappingURL=base.css.map */
