--- a/public/css/components.css
+++ b/public/css/components.css
@@ -41,7 +41,7 @@
   position: fixed;
   bottom: 50px;
   color: #888;
-  background: white;
+  background: #fff;
   height: 60px;
   width: 60px;
   line-height: 60px; }
@@ -99,3 +99,5 @@
 .index-btn:active, .index-btn:focus, .index-btn:hover {
   color: #fff;
   text-decoration: none; }
+
+/*# sourceMappingURL=components.css.map */
