--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -295,7 +295,7 @@ $width:270px;
                   position: relative;
                   margin: 0 15px 40px;
                   box-shadow: 0 0 0 3px #ededed;
-                  padding-top: 50px;
+                  padding-top: 60px;
                   background-repeat: no-repeat;
                 input{
                       visibility: hidden;
@@ -324,6 +324,11 @@ $width:270px;
                     white-space:nowrap;
                     color: #676767;
                     font-size: 12px;
+                    margin: 10px 0 0 0;
+                    span{
+                        display: block;
+                        line-height: 1.5;
+                    }
                 }
             }
         }
