--- a/cloud/views/index.html
+++ b/cloud/views/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>有道翻译官</title>
+  <title>团团</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <link rel="stylesheet" href="style.css">
     <link href="dialog.css" type="text/css" rel="stylesheet">
